# mermaid2-content.code.annotate

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
docs/: index.md
