[tool.poetry]
name = "mermaid2-content.code.annotate"
version = "0.0.1"
description = "content.code.annotate glitch with mermaid2"
authors = ["Leo Gallucci <elgalu3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.2"
mkdocs-material = "^9.2.6"
mkdocs-mermaid2-plugin = "^1.1.0"
pymdown-extensions = "^10.3"

[build-system]
requires = ["poetry>=1.1.11"]
build-backend = "poetry.masonry.api"

[tool.codespell]
skip = 'poetry.lock'
